# RDBPFN

./: .gitignore  README.md
data_generation/: README.md
data_generation/RDB/: RDB_generate.sh  dag_to_rdb_config_large.yaml  dag_to_rdb_config_small.yaml  dag_to_rdb_generator.py  pyproject.toml
data_generation/RDB/datasets/: rdb_v1.pth
data_generation/RDB/src/prior/: __init__.py  activations.py  hp_sampling.py  mlp_scm.py  prior_config.py  row_gnn.py  temporal_vocab.py  utils.py
data_generation/RDB/src/table_def/: __init__.py  dataset_meta.py  simple_task_generation.py  table_generation.py  task_generation.py  task_generation_utils.py  yaml_utils.py
data_generation/single_table/: single_table_generate.sh
data_generation/single_table/src/tabicl/prior/: dataset.py  hp_sampling.py  mlp_scm.py  prior_config.py  reg2cls.py
data_preprocessing/: RDB_processing.sh  README.md  benchmark_preprocess_depth1.sh  benchmark_preprocess_depth2.sh  filter_h5_sampling_columns.py  merge_dbinfer_to_h5.py  merge_icl_batches_to_h5.py  preprocess_script.sh  pyproject.toml  single_table_processing.sh
data_preprocessing/configs/dfs/: dfs-1-sql.yaml  dfs-2-sql.yaml  dfs-3-sql.yaml
data_preprocessing/configs/transform/: post-dfs.yaml  pre-dfs.yaml  single.yaml
data_preprocessing/dbinfer_bench/: __init__.py  dataset_meta.py
data_preprocessing/dbinfer_bench_simplified/: table_writer.py  yaml_utils.py
data_preprocessing/tab2graph/: __init__.py  datetime_utils.py  device.py  dgl_utils.py  evaluator.py  main.py  task_construct_utils.py  time_budget.py
data_preprocessing/tab2graph/_bak/: individual_temporal_sampler.py  prepare_rdbms.py  sampler.py
data_preprocessing/tab2graph/cli/: __init__.py  builtin_dataset.py  construct_graph.py  evaluate_gml.py  evaluate_tab.py  fit_gml.py  fit_tab.py  fit_utils.py  get_node_embed.py  preprocess.py  sweep_gml.py  sweep_tab.py  utils.py
data_preprocessing/tab2graph/dfs_tool/: __init__.py  demo.py  utils.py
data_preprocessing/tab2graph/graph_construction/: __init__.py  base.py  er_graph_construction.py  rdb2graph.py  utils.py
data_preprocessing/tab2graph/preprocess/: __init__.py  base.py  transform_preprocess.py
data_preprocessing/tab2graph/preprocess/dfs/: __init__.py  core.py  database.py  dfs2sql_engine.py  dfs_preprocess.py  ft_engine.py  gen_sqls.py  primitives.py
data_preprocessing/tab2graph/preprocess/transform/: __init__.py  base.py  canonicalize.py  category.py  composite.py  datetime.py  dummy_table.py  fill_timestamp.py  filter_column.py  key_mapping.py  numeric.py  text_dpr.py  text_glove.py  wrapper.py
data_preprocessing/tab2graph/solutions/: __init__.py  ag_solution.py  base_tab.py  negative_sampler.py  predictor.py  tabnn_solution.py  tabpfn_solution.py  tabular_dataset_config.py  utils.py  xgb_solution.py
data_preprocessing/tab2graph/solutions/encoders/: __init__.py  base.py  categorical.py  composite.py  id.py  numeric.py
data_preprocessing/tab2graph/solutions/gml/: __init__.py  base_gml.py  base_gml_solution.py  gat.py  graph_dataset_config.py  graph_feat_encoder.py  hgt.py  negative_sampler.py  pna.py  sage.py
data_preprocessing/tab2graph/solutions/gml/gnn/: __init__.py  edgegat.py  edgehgt.py  edgesage.py  hetero.py  pna.py  utils.py
data_preprocessing/tab2graph/solutions/tabnn/: __init__.py  fm.py  fttransformer.py  mlp.py  registry.py
inference/: README.md  demo.py  demo_multiclass.py  demo_relational.py  predict_csv.py  predict_rdb.py
inference/checkpoints/RDBPFN/: model.pt
inference/examples/: demo_test.csv  demo_train.csv
inference/examples/rdb/: customers.csv  orders.csv
inference/src/: __init__.py  checkpoint.py  metrics.py  model.py  predictor.py  preprocessing.py  relational.py
model_pretrain/: README.md  pyproject.toml
model_pretrain/LimiX/config/: cls_default_1est.json  cls_default_noretrieval.json
model_pretrain/checkpoints/RDBPFN_single/: model_eval00360.pt
model_pretrain/conf_eval/: eval.yaml  eval_csv.yaml
model_pretrain/conf_eval/dataset/: clf_npz.yaml  full-1024.yaml  full-128.yaml  full-256.yaml  full-32.yaml  full-512.yaml  full-64.yaml  full-debug.yaml
model_pretrain/conf_eval/model/: RDBPFN.yaml  RDBPFN_single.yaml  autogluon-medium.yaml  autogluon-mitra.yaml  base_model.yaml  limix16m.yaml  limix16m_lite.yaml  limix2m.yaml  random_forest.yaml  tabiclv1.yaml  tabiclv11.yaml  tabiclv11_lite.yaml  tabpfnv2.yaml  tabpfnv25.yaml  tabpfnv25_lite.yaml  xgboost.yaml
model_pretrain/conf_train/: RDBPFN.yaml  RDBPFN_single.yaml  base_train.yaml
model_pretrain/src/: dataloaders.py  eval.py  eval_classifiers.py  eval_csv.py  eval_utils.py  inmemory_dataloader.py  models.py  train.py  training.py  utils.py
model_pretrain/src/dbinfer_bench_simplified/: __init__.py  dataset_meta.py  rdb_dataset.py  table_loader.py
